# labterm

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml
docs/source/: API.md  API.rst  conf.py  dashboard.rst  dashboard_item.rst  index.md  index.rst  install.md  install.rst  instrument.rst  user_guide.md  user_guide.rst
examples/: README.md
examples/00_hello_world/: main.py
examples/01_getting_started/: main.py
examples/02_power_control/: main.py  power_module.py
examples/03_server_status/: main.py  tester.py
examples/04_antenna/: antenna.py  antenna_position.py  main.py
examples/power_control/: dht22.py  main.py  power_module.py
examples/server_status/: main.py
src/labterm/: __init__.py  dashboard.py  dashboard_item.py  instrument.py
